# fraud-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
artifacts/00_boosting/: fraud_detection_model.cbm  metadata.pkl
experiments/: 00_boosting.ipynb
service/: __main__.py  anonimizer.py  anonymizer.py  inference.py  preprocessor.py  producers.py  ui.py
service/example/: producer.py
services/: anonymizer.py  inference.py  preprocessor.py  producers.py  ui.py
services/example/: README.md  producer.py
