[project]
name = "fraud-detection"
version = "0.1.0"
authors = [
  { name = "Ailurus1", email = "email@example.com" },
]
description = "A simple fraud detection system"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "confluent-kafka",
    "catboost",
    "polars",
    "gradio",
    "numpy",
    "scikit-learn",
    "notebook",
    "kagglehub",
    "imbalanced-learn"
]

[tool.hatch.build.targets.wheel]
packages = ["service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"