[project]
name = "fraud-detection"
version = "0.1.0"
authors = [
  { name = "Ailurus1", email = "email@example.com" },
]
description = "A simple fraud detection system"

requires-python = ">=3.8"

dependencies = [
    "pre-commit",
    "confluent-kafka"
]

[project.optional-dependencies]
producer = [
    "polars",
    "kagglehub"
]
preprocessor = [
    "scikit-learn"
]
inference = [
    "catboost",
    "numpy",
    "scikit-learn"
]
ui = [
    "gradio"
]
modeling = [
    "notebook",
    "imbalanced-learn"
]

[tool.hatch.build.targets.wheel]
packages = ["services"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
